# sea_project

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  setup.py  spreadsheet.xlsx
sea/: clean_command.py  cli.py  copy_command.py  edit_command.py  neural_command.py  plot_command.py  read_command.py
sea/ml/: base_model.py  classification_model.py  data_utils.py  evaluate_command.py  prepare_data.py  regression_model.py  split_command.py  train_command.py
